# atrio-fm-chatbot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.nl.md  SECOND_COMPUTER_SETUP.md  SECURITY.md  atrio_brand_guide_v2.jsx  atrio_competitive_features.jsx  docker-compose.override.yml.example  docker-compose.yml  future_additions.md  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  README.nl.md  alembic.ini  mypy.ini  organize_test_files.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  security_prepush_check.py  test_rag.py  test_runbook.md  tickets.db  tickets_old_backup.db
backend/alembic/: env.py
backend/app/: __init__.py  chat_injection_guard.py  chat_output_guard.py  classifier.py  config.py  database.py  db_migrations.py  doc_extract.py  doc_sanitize.py  eval_runner.py  ingest.py  llm.py  llm_crypto.py  llm_profile_diag.py  llm_profiles.py  mail.py  main.py  prompt_analyzer.py  prompt_consolidator.py  prompt_replay.py  prompt_rule_embeddings.py  prompt_rule_similarity.py  question_bank.py  rag.py  rag_eval.py  request_context.py  training_json_store.py  training_quality_analysis_enrich.py
backend/data/: eval_golden.jsonl
backend/docs_fm/: 01_building_general_info.md  02_hvac_systems.md  03_electrical_systems.md  04_plumbing_water.md  05_fire_safety_emergency.md  06_security_access.md  07_parking_transport.md  08_it_network.md  09_elevators.md  10_cleaning_waste.md  11_meeting_rooms_spaces.md  12_building_rules_policies.md  13_faq_quick_answers.md  (+2 more)
docs/: ci.md  (+25 more)
(+136 files in other folders)
